@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="ONTOLOGY LOAD pipeline -- build  2019-09-30" />
+        <property name="version" value="ONTOLOGY LOAD pipeline -- build  2019-10-18" />
         <property name="oboFiles"><!--key: default ontology ID; value: path to data file -->
             <map><!-- NOTE: if ontology is found at http://www.obofoundry.org/, its url will start
                    ...      https://raw.githubusercontent.com/...
@@ -258,7 +258,7 @@
     </bean>
 
     <bean id="oboFileGenerator" class="edu.mcw.rgd.dataload.ontologies.OboFileCreator">
-        <property name="version" value="--RGD OBO FILE GENERATOR -- ver. 1.3.6 -- 2019-01-15 --" />
+        <property name="version" value="--RGD OBO FILE GENERATOR -- build 2019-10-18 --" />
         <property name="versionedFiles">
             <map>
                 <entry key="PW" value="ftp://ftp.rgd.mcw.edu/pub/ontology/pathway/pathway.obo"/>
