@@ -1,3 +1,6 @@
+Oct 18, 2019
+  obo-generator: added export of subsets
+
 Sep 30, 2019
   term stats loader: simplified code
 
